feat: enhance SEO and social sharing metadata in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Oslo418" />
-    <title>Floyd-Steinberg Image Dithering - by Oslo418</title>
+    <title>Online Floyd-Steinberg Image Dithering Tool</title>
+    <meta name="description" content="Free minimalist online tool to apply Floyd-Steinberg and custom dithering patterns to your images. Adjust threshold, resolution, and download result as PNG or JPEG." />
+    <meta name="keywords" content="image dithering, floyd steinberg, online tool, image converter, atkinson, burkes, bayer, sierra, minimal, png, jpeg" />
+    <link rel="canonical" href="https://steinberg-image.vercel.app/" />
+    <!-- Open Graph -->
+    <meta property="og:title" content="Online Floyd-Steinberg Image Dithering Tool" />
+    <meta property="og:description" content="Apply Floyd-Steinberg and custom dithering patterns to your images. Free, minimalist, and instant." />
+    <meta property="og:type" content="website" />
+    <!-- <meta property="og:url" content="https://steinberg-image.vercel.app/" />
+    <meta property="og:image" content="https://steinberg-image.vercel.app/og-image.png" /> -->
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Online Floyd-Steinberg Image Dithering Tool" />
+    <meta name="twitter:description" content="Apply Floyd-Steinberg and custom dithering patterns to your images. Free, minimalist, and instant." />
+    <!-- <meta name="twitter:image" content="https://steinberg-image.vercel.app/og-image.png" /> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
