--- a/index.html
+++ b/index.html
@@ -8,21 +8,34 @@
     <title>Online Image Dithering Tool – Floyd-Steinberg, Bayer, Atkinson & More</title>
     <meta name="description" content="Free online tool to dither images using Floyd-Steinberg, Bayer, Atkinson, Burkes, Sierra, Stucki, and more. Adjust threshold, resolution, invert, and download as PNG or JPEG. No upload required." />
     <meta name="keywords" content="image dithering, floyd steinberg, atkinson, burkes, stucki, sierra, bayer, stevenson-arce, online tool, image converter, threshold, invert, png, jpeg, free, minimal" />
-    <link rel="canonical" href="https://steinberg-image.vercel.app/" />
+  <link rel="canonical" href="https://ditheringstudio.com/" />
     <!-- Open Graph -->
     <meta property="og:title" content="Online Image Dithering Tool – Floyd-Steinberg, Bayer, Atkinson & More" />
     <meta property="og:description" content="Dither your images online for free using Floyd-Steinberg, Bayer, Atkinson, Burkes, Sierra, Stucki, and more. No upload required." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://steinberg-image.vercel.app/" />
-    <!-- <meta property="og:image" content="https://steinberg-image.vercel.app/og-image.png" /> -->
+  <meta property="og:url" content="https://ditheringstudio.com/" />
+  <!-- <meta property="og:image" content="https://ditheringstudio.com/og-image.png" /> -->
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Online Image Dithering Tool – Floyd-Steinberg, Bayer, Atkinson & More" />
     <meta name="twitter:description" content="Dither your images online for free using Floyd-Steinberg, Bayer, Atkinson, Burkes, Sierra, Stucki, and more. No upload required." />
-    <!-- <meta name="twitter:image" content="https://steinberg-image.vercel.app/og-image.png" /> -->
+  <!-- <meta name="twitter:image" content="https://ditheringstudio.com/og-image.png" /> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Dithering Studio",
+        "url": "https://ditheringstudio.com/",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://ditheringstudio.com/?q={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
