feat(seo): add separate image/video routes, rebrand to Dithering Studio, and update to 25+ algorithms
- Create dedicated /Dithering/Image and /Dithering/Video routes for better SEO targeting
- Add initialMode prop to DitheringTool component for route-based mode initialization
- Fix mode switching to use React Router navigation instead of local state
- Update all SEO metadata (index.html, Home.tsx, DitheringTool.tsx) with video keywords
- Add trending keywords: gif dithering, mp4 dithering, retro video effect, 8-bit filter, vaporwave, lofi aesthetic
- Rebrand from "Steinberg Image" to "Dithering Studio" throughout homepage
- Update hero section with wider responsive layout and single "Start Dithering" CTA
- Update algorithm count from 15+/20+ to accurate 25+ algorithms
- Enhance "Why Dithering Studio?" section with comprehensive feature descriptions
- Update sitemap.xml with new routes
- Add video mode URL parameter support for backward compatibility

--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <link rel="icon" type="image/png" href="/ditheringstudio.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Oslo418" />
-    <title>Online Image Dithering Tool – Floyd-Steinberg, Bayer, Atkinson & More</title>
-    <meta name="description" content="Free online tool to dither images using Floyd-Steinberg, Bayer, Atkinson, Burkes, Sierra, Stucki, and more. Adjust threshold, resolution, invert, and download as PNG or JPEG. No upload required." />
-    <meta name="keywords" content="image dithering, floyd steinberg, atkinson, burkes, stucki, sierra, bayer, stevenson-arce, online tool, image converter, threshold, invert, png, jpeg, free, minimal" />
+    <title>Online Image & Video Dithering Tool – Floyd-Steinberg, Bayer, Atkinson & More</title>
+    <meta name="description" content="Free online tool to dither images and videos using Floyd-Steinberg, Bayer, Atkinson, Burkes, Sierra, Stucki, and more. Convert images to retro pixel art or apply 8-bit effects to videos. Export as PNG, JPEG, SVG, GIF, MP4, WebM. No upload required – fully client-side." />
+    <meta name="keywords" content="image dithering, video dithering, floyd steinberg, atkinson, burkes, stucki, sierra, bayer, online tool, gif dithering, mp4 dithering, retro video effect, pixel art video, 8-bit video filter, vaporwave effect, lofi aesthetic, webm dithering, video to gif, image converter, threshold, png, jpeg, svg, mp4, webm, free, client-side" />
     <link rel="canonical" href="https://ditheringstudio.com/" />
     <!-- Open Graph -->
-    <meta property="og:title" content="Online Image Dithering Tool – Floyd-Steinberg, Bayer, Atkinson & More" />
-    <meta property="og:description" content="Dither your images online for free using Floyd-Steinberg, Bayer, Atkinson, Burkes, Sierra, Stucki, and more. No upload required." />
+    <meta property="og:title" content="Online Image & Video Dithering Tool – Floyd-Steinberg, Bayer, Atkinson & More" />
+    <meta property="og:description" content="Dither your images and videos online for free using Floyd-Steinberg, Bayer, Atkinson, and more. Apply retro pixel art effects to images or create 8-bit style videos. Fully client-side – no uploads required." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ditheringstudio.com/" />
     <meta property="og:image" content="https://ditheringstudio.com/socials-img.png" />
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Online Image Dithering Tool – Floyd-Steinberg, Bayer, Atkinson & More" />
-    <meta name="twitter:description" content="Dither your images online for free using Floyd-Steinberg, Bayer, Atkinson, Burkes, Sierra, Stucki, and more. No upload required." />
+    <meta name="twitter:title" content="Online Image & Video Dithering Tool – Floyd-Steinberg, Bayer, Atkinson & More" />
+    <meta name="twitter:description" content="Dither your images and videos online for free using Floyd-Steinberg, Bayer, Atkinson, and more. Apply retro pixel art effects to images or create 8-bit style videos. Fully client-side – no uploads required." />
     <meta name="twitter:image" content="https://ditheringstudio.com/socials-img.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
